--- a/views/userdare.ejs
+++ b/views/userdare.ejs
@@ -15,173 +15,174 @@
 <!-- We can use a small j-script to put the data-content on the td's based on the content of the th. -->
    <h1 id="hallOfFame">Hall of Fame and Shame</h1>
       <p>Put on your gameface</p>
-   <table>
-     <thead>
-       <tr>
-         <th>Dare</th>
-         <th>Instagram Evidence</th>
-         <th>Result</th>
-         <th>Active</th>
-       </tr>
-     </thead>
-     <tbody>
-       <tr>
-         <td data-content="This is a very long label">
-            <h2>Welcome to the Thunderdome</h2>
-            <p>
-              Don't be scared
-            </p>
-         </td>
-         <td data-content="Subject">
-           <div class="media ">
-             <span class="img">
-               <img src="http://i.imgur.com/IIxea1j.jpg" alt="me" />
-             </span>
-             <div class="bd">
-               #Thunderdome
-             </div>
-           </div>
-         </td>
-         <td data-content="Completed Date">
-           <time datetime="2016-23-03">#</time>
-         </td>
-         <td data-content="Process Status">
-           Pending. Get after it!
-         </td>
-       </tr>
+      <table>
+        <thead>
+          <tr>
+            <th>Dare</th>
+            <th>Instagram Evidence</th>
+            <th>Result</th>
+            <th>Active</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td data-content="This is a very long label">
+               <h2>Get into an epic battle</h2>
+               <p>
+                 Don't be scared
+               </p>
+            </td>
+            <td data-content="Subject">
+              <div class="media ">
+                <span class="img">
+                  <img src="http://i.imgur.com/IIxea1j.jpg" alt="me" />
+                </span>
+                <div class="bd">
+                  #Thunderdome
+                </div>
+              </div>
+            </td>
+            <td data-content="Completed Date">
+              <time datetime="2016-23-03">#</time>
+            </td>
+            <td data-content="Process Status">
+              Pending. Get after it!
+            </td>
+          </tr>
 
-       <tr>
-         <td data-content="Task">
-            <h2>If you know you're going over the edge...</h2>
-            <p>
-              ...what's the point in slowing down?
-            </p>
-         </td>
-         <td data-content="Subject">
-           <div class="media ">
-             <span class="img">
-               <img src="http://i.imgur.com/FyHXvTc.jpg" alt="me" />
-             </span>
-             <div class="bd">
-               #leapoffaith
-               <br>
-               #realchicken
-             </div>
-           </div>
-         </td>
-         <td data-content="Completed Date">
-           <time datetime="2016-23-03">04-12-2016</time>
-         </td>
-         <td data-content="Process Status">
-           Done!
-         </td>
-       </tr>
+          <tr>
+            <td data-content="Task">
+               <h2>Pretend you're superman</h2>
+               <p>
+                  Steel nerves
+               </p>
+            </td>
+            <td data-content="Subject">
+              <div class="media ">
+                <span class="img">
+                  <img src="http://i.imgur.com/FyHXvTc.jpg" alt="me" />
+                </span>
+                <div class="bd">
+                  #leapoffaith
+                  <br>
+                  #realchicken
+                </div>
+              </div>
+            </td>
+            <td data-content="Completed Date">
+              <time datetime="2016-23-03">04-12-2016</time>
+            </td>
+            <td data-content="Process Status">
+              Done!
+            </td>
+          </tr>
 
-       <tr>
-         <td data-content="Task">
-            <h2>What has two thumbs and beat down Ronald McDonald?</h2>
-            <p>This guy. Obviously.
-         </td>
-         <td data-content="Subject">
-           <div class="media ">
-             <span class="img">
-               <img src="http://i.imgur.com/5czBm9c.jpg" alt="me" />
-             </span>
-             <div class="bd">
-               #doubledown
-             </div>
-           </div>
-         </td>
-         <td data-content="Completed Date">
-           <time datetime="2016-23-03">04-14-2016</time>
-         </td>
-         <td data-content="Process Status">
-           Chickened Out
-         </td>
-       </tr>
+          <tr>
+            <td data-content="Task">
+               <h2>Get a picture with a cartoon character</h2>
+               <p>You know this guy.
+               </p>
+            </td>
+            <td data-content="Subject">
+              <div class="media ">
+                <span class="img">
+                  <img src="http://i.imgur.com/5czBm9c.jpg" alt="me" />
+                </span>
+                <div class="bd">
+                  #doubledown
+                </div>
+              </div>
+            </td>
+            <td data-content="Completed Date">
+              <time datetime="2016-23-03">04-14-2016</time>
+            </td>
+            <td data-content="Process Status">
+              Chickened Out
+            </td>
+          </tr>
 
-      <tr>
-       <td data-content="Task">
-          <h2>Game recognize game</h2>
-          <p>Go on. Get weird.
-       </td>
-       <td data-content="Subject">
-         <div class="media ">
-           <span class="img">
-             <img src="http://i.imgur.com/nShIsT5.jpg" alt="me" />
-           </span>
-           <div class="bd">
-             #yomummyjokes
-             <br>
-             #tuttut
-           </div>
-         </div>
-       </td>
-       <td data-content="Completed Date">
-         <time datetime="2016-23-03">04-12-2016</time>
-       </td>
-       <td data-content="Process Status">
-         Done!
-       </td>
-      </tr>
-
-
-      <tr>
-        <td data-content="Task">
-           <h2>No rules on a bender</h2>
-           <p>
-             Judge away pal. You read about weird. I live weird.
-           </p>
-        </td>
-        <td data-content="Subject">
-          <div class="media ">
-            <span class="img">
-              <img src="http://i.imgur.com/qOAbF5c.jpg" alt="me" />
-            </span>
-            <div class="bd">
-              #consequences
-              <br>
-              #nocontext
+         <tr>
+          <td data-content="Task">
+             <h2>Wear something ridiculous to the club</h2>
+             <p>Go on. Get weird.
+          </td>
+          <td data-content="Subject">
+            <div class="media ">
+              <span class="img">
+                <img src="http://i.imgur.com/nShIsT5.jpg" alt="me" />
+              </span>
+              <div class="bd">
+                #yomummyjokes
+                <br>
+                #tuttut
+              </div>
             </div>
-          </div>
-        </td>
-        <td data-content="Completed Date">
-          <time datetime="2016-23-03">04-12-2016</time>
-        </td>
-        <td data-content="Process Status">
-          Done!
-        </td>
-      </tr>
+          </td>
+          <td data-content="Completed Date">
+            <time datetime="2016-23-03">04-12-2016</time>
+          </td>
+          <td data-content="Process Status">
+            Done!
+          </td>
+         </tr>
 
 
-      <tr>
-        <td data-content="Task">
-           <h2>My other vehicle is...</h2>
-           <p>
-             ...just try and guess.
-        </td>
-        <td data-content="Subject">
-          <div class="media ">
-            <span class="img">
-              <img src="http://i.imgur.com/FkjcMPa.jpg" alt="me" />
-            </span>
-            <div class="bd">
-              #capitalistcowboy
-              <br>
-              #urbandomestication
-            </div>
-          </div>
-        </td>
-        <td data-content="Completed Date">
-          <time datetime="2016-23-03">04-12-2016</time>
-        </td>
-        <td data-content="Process Status">
-          Done!
-        </td>
-      </tr>
+         <tr>
+           <td data-content="Task">
+              <h2>Take the most awkward photo you can</h2>
+              <p>
+                Judge away pal. You read about weird. I live weird.
+              </p>
+           </td>
+           <td data-content="Subject">
+             <div class="media ">
+               <span class="img">
+                 <img src="http://i.imgur.com/qOAbF5c.jpg" alt="me" />
+               </span>
+               <div class="bd">
+                 #consequences
+                 <br>
+                 #nocontext
+               </div>
+             </div>
+           </td>
+           <td data-content="Completed Date">
+             <time datetime="2016-23-03">04-12-2016</time>
+           </td>
+           <td data-content="Process Status">
+             Done!
+           </td>
+         </tr>
 
-     </tbody>
-   </table>
 
+         <tr>
+           <td data-content="Task">
+              <h2>Tame a wild beast</h2>
+              <p>
+                ...go feral
+           </td>
+           <td data-content="Subject">
+             <div class="media ">
+               <span class="img">
+                 <img src="http://i.imgur.com/FkjcMPa.jpg" alt="me" />
+               </span>
+               <div class="bd">
+                 #capitalistcowboy
+                 <br>
+                 #urbandomestication
+               </div>
+             </div>
+           </td>
+           <td data-content="Completed Date">
+             <time datetime="2016-23-03">04-12-2016</time>
+           </td>
+           <td data-content="Process Status">
+             Done!
+           </td>
+         </tr>
+
+
+        </tbody>
+      </table>
 </body>
 </html>
